--- a/presenter/.stylelintrc.json
+++ b/presenter/.stylelintrc.json
@@ -1,7 +1,10 @@
 {
     "rules": {
         "selector-class-pattern": "^([a-z][a-z0-9]*)((--?|__)?[a-z0-9]+)*$",
-        "media-query-no-invalid": null
+        "media-query-no-invalid": null,
+        "at-rule-no-unknown": null,
+        "scss/at-rule-no-unknown": true,
+        "scss/load-no-partial-leading-underscore": null
     },
     "extends": [
         "stylelint-config-standard",
