--- a/deployment/nginx/default.conf
+++ b/deployment/nginx/default.conf
@@ -14,6 +14,9 @@ server {
 
       proxy_pass         http://127.0.0.1:3000/;
       proxy_redirect     off;
+
+      access_log /var/www/localhost/htdocs/dreammall.earth/log/nginx.access.presenter.log combined;
+      error_log /var/www/localhost/htdocs/dreammall.earth/log/nginx.error.presenter.log warn;
   }
 
   location /api {
@@ -26,6 +29,9 @@ server {
 
       proxy_pass         http://127.0.0.1:4000/;
       proxy_redirect     off;
+
+      access_log /var/www/localhost/htdocs/dreammall.earth/log/nginx.access.backend.log combined;
+      error_log /var/www/localhost/htdocs/dreammall.earth/log/nginx.error.backend.log warn;
   }
 
   location /docs {
@@ -33,6 +39,9 @@ server {
       index index.html;
 
       try_files $uri $uri/ =404;
+
+      access_log /var/www/localhost/htdocs/dreammall.earth/log/nginx.access.docs.log combined;
+      error_log /var/www/localhost/htdocs/dreammall.earth/log/nginx.error.docs.log warn;
   }
 
   location /hooks/ {
@@ -45,5 +54,8 @@ server {
 
       proxy_pass         http://127.0.0.1:9000/hooks/;
       proxy_redirect     off;
+
+      access_log /var/www/localhost/htdocs/dreammall.earth/log/nginx.access.hooks.log combined;
+      error_log /var/www/localhost/htdocs/dreammall.earth/log/nginx.error.hooks.log warn;
   }
 }
