--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,7 @@
     "prisma-extension-soft-delete": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "tsconfig-paths": "^4.2.0",
+    "tslog": "^4.9.2",
     "type-graphql": "^2.0.0-beta.3"
   },
   "devDependencies": {
