--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "npm run test:lint && npm run test:unit",
     "docs:dev": "vuepress dev .",
     "docs:build": "vuepress build .",
-    "update": "npx npm-check-update"
+    "update": "npx npm-check-updates"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
