--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,14 @@ updates:
     day: "saturday"
     timezone: "Europe/Berlin"
     time: "03:00"
+- package-ecosystem: npm
+  directory: "/"
+  rebase-strategy: "disabled"
+  schedule:
+    interval: weekly
+    day: "saturday"
+    timezone: "Europe/Berlin"
+    time: "03:00"
 - package-ecosystem: docker
   directory: "/"
   rebase-strategy: "disabled"
