--- a/backend/docker-compose.override.yml
+++ b/backend/docker-compose.override.yml
@@ -18,6 +18,25 @@ services:
       # bind the local folder to the docker to allow live reload
       - ./:/server
 
+  #######################################################
+  # DOCUMENTATION #######################################
+  #######################################################
+  documentation:
+    # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
+    image: it4c/backend:local-documentation
+    build:
+      target: documentation
+    ports:
+      - 8080:8080
+    environment:
+      - NODE_ENV=development
+    volumes:
+      # This makes sure the docker container has its own node modules.
+      # Therefore it is possible to have a different node version on the host machine
+      - documentation_node_modules:/app/node_modules
+      # bind the local folder to the docker to allow live reload
+      - ./:/app
+
 volumes:
   backend_node_modules:
   documentation_node_modules:
