--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -25,7 +25,7 @@ services:
     volumes:
       # This makes sure the docker container has its own node modules.
       # Therefore it is possible to have a different node version on the host machine
-      - presenter_node_modules:/app/node_modules
+      #- presenter_node_modules:/app/node_modules
       # bind the local folder to the docker to allow live reload
       - ./presenter:/app
 
@@ -45,7 +45,7 @@ services:
     volumes:
       # This makes sure the docker container has its own node modules.
       # Therefore it is possible to have a different node version on the host machine
-      - presenter_storybook_node_modules:/app/node_modules
+      #- presenter_storybook_node_modules:/app/node_modules
       # bind the local folder to the docker to allow live reload
       - ./presenter:/app
 
@@ -54,7 +54,7 @@ services:
   #######################################################
   presenter-documentation:
     # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
-    image: it4c/frontend:local-documentation
+    image: dreammall/presenter:local-documentation
     build:
       context: ./presenter
       target: documentation
@@ -65,7 +65,7 @@ services:
     volumes:
       # This makes sure the docker container has its own node modules.
       # Therefore it is possible to have a different node version on the host machine
-      - presenter_documentation_node_modules:/app/node_modules
+      #- presenter_documentation_node_modules:/app/node_modules
       # bind the local folder to the docker to allow live reload
       - ./presenter:/app
 
@@ -74,7 +74,7 @@ services:
   #######################################################
   backend:
     # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
-    image: it4c/backend:local-development
+    image: dreammall/backend:local-development
     build:
       target: development
     environment:
@@ -82,9 +82,29 @@ services:
     volumes:
       # This makes sure the docker container has its own node modules.
       # Therefore it is possible to have a different node version on the host machine
-      - backend_node_modules:/server/node_modules
+      #- backend_node_modules:/server/node_modules
       # bind the local folder to the docker to allow live reload
       - ./backend:/server
+
+  #######################################################
+  # BACKEND DOCUMENTATION ###############################
+  #######################################################
+  backend-documentation:
+    # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
+    image: dreammall/backend:local-documentation
+    build:
+      context: ./backend
+      target: documentation
+    ports:
+      - 8082:8080
+    environment:
+      - NODE_ENV=development
+    volumes:
+      # This makes sure the docker container has its own node modules.
+      # Therefore it is possible to have a different node version on the host machine
+      #- backend_documentation_node_modules:/app/node_modules
+      # bind the local folder to the docker to allow live reload
+      - ./backend:/app
 
   ########################################################
   # DOCUMENTATION ########################################
@@ -101,7 +121,7 @@ services:
     volumes:
       # This makes sure the docker container has its own node modules.
       # Therefore it is possible to have a different node version on the host machine
-      - documentation_node_modules:/app/node_modules
+      #- documentation_node_modules:/app/node_modules
       # bind the local folder to the docker to allow live reload
       - ./:/app
 
