--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -105,7 +105,7 @@ services:
       # Therefore it is possible to have a different node version on the host machine
       #- backend_documentation_node_modules:/app/node_modules
       # bind the local folder to the docker to allow live reload
-      - ./backend:/app
+      - ./backend:/server
 
   ########################################################
   # DOCUMENTATION ########################################
