--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
     "release": "scripts/release.sh",
     "update": "npx npm-check-updates"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@vuepress/theme-default": "^2.0.0-rc.17"
+  },
   "devDependencies": {
-    "@vuepress/bundler-vite": "^2.0.0-rc.0",
+    "@vuepress/bundler-vite": "^2.0.0-rc.8",
     "remark-cli": "^12.0.0",
     "remark-gfm": "^4.0.0",
     "remark-preset-lint-consistent": "^5.1.2",
     "remark-preset-lint-markdown-style-guide": "^5.1.3",
     "remark-preset-lint-recommended": "^6.1.3",
-    "vuepress": "^2.0.0-rc.0"
+    "vuepress": "^2.0.0-rc.8"
   }
 }
