--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -25,7 +25,7 @@ services:
     volumes:
       # This makes sure the docker container has its own node modules.
       # Therefore it is possible to have a different node version on the host machine
-      - presenter_node_modules:/app/node_modules
+      #- presenter_node_modules:/app/node_modules
       # bind the local folder to the docker to allow live reload
       - ./presenter:/app
 
@@ -45,7 +45,7 @@ services:
     volumes:
       # This makes sure the docker container has its own node modules.
       # Therefore it is possible to have a different node version on the host machine
-      - presenter_storybook_node_modules:/app/node_modules
+      #- presenter_storybook_node_modules:/app/node_modules
       # bind the local folder to the docker to allow live reload
       - ./presenter:/app
 
@@ -65,7 +65,7 @@ services:
     volumes:
       # This makes sure the docker container has its own node modules.
       # Therefore it is possible to have a different node version on the host machine
-      - presenter_documentation_node_modules:/app/node_modules
+      #- presenter_documentation_node_modules:/app/node_modules
       # bind the local folder to the docker to allow live reload
       - ./presenter:/app
 
@@ -83,7 +83,7 @@ services:
     volumes:
       # This makes sure the docker container has its own node modules.
       # Therefore it is possible to have a different node version on the host machine
-      - backend_node_modules:/server/node_modules
+      #- backend_node_modules:/server/node_modules
       # bind the local folder to the docker to allow live reload
       - ./backend:/server
 
@@ -103,7 +103,7 @@ services:
     volumes:
       # This makes sure the docker container has its own node modules.
       # Therefore it is possible to have a different node version on the host machine
-      - backend_documentation_node_modules:/app/node_modules
+      #- backend_documentation_node_modules:/app/node_modules
       # bind the local folder to the docker to allow live reload
       - ./backend:/server
 
@@ -122,7 +122,7 @@ services:
     volumes:
       # This makes sure the docker container has its own node modules.
       # Therefore it is possible to have a different node version on the host machine
-      - documentation_node_modules:/app/node_modules
+      #- documentation_node_modules:/app/node_modules
       # bind the local folder to the docker to allow live reload
       - ./:/app
 
