--- a/.github/workflows/backend.test.unit.code.yml
+++ b/.github/workflows/backend.test.unit.code.yml
@@ -32,6 +32,11 @@ jobs:
     env:
       WORKING_DIRECTORY: ./backend
     steps:
+      - name: Set Node version
+        uses: actions/setup-node@v4
+        with:
+          node-version: '>=21'
+
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -39,8 +44,5 @@ jobs:
         run: docker-compose -f docker-compose.yml up --detach --no-deps database
 
       - name: Backend | Unit
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '>=21'
         run: npm install && npm run db:migrate && npm run test:unit
         working-directory: ${{env.WORKING_DIRECTORY}}
