--- a/.github/workflows/presenter.deploy.chromatic.yml
+++ b/.github/workflows/presenter.deploy.chromatic.yml
@@ -11,6 +11,11 @@ jobs:
       CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
       WORKING_DIRECTORY: ./presenter
     steps:
+      - name: Set Node version
+        uses: actions/setup-node@v4
+        with:
+          node-version: '>=21'
+
       - name: Checkout code
         uses: actions/checkout@v4
         with:
