--- a/.github/workflows/presenter.test.build.code.yml
+++ b/.github/workflows/presenter.test.build.code.yml
@@ -11,7 +11,13 @@ jobs:
     outputs:
       changes: ${{ steps.changes.outputs.presenter-test-build-code }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Set Node version
+        uses: actions/setup-node@v4
+        with:
+          node-version: '>=21'
+
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Check for presenter file changes
         uses: dorny/paths-filter@v3.0.1
