--- a/.github/workflows/backend.test.build.docker.yml
+++ b/.github/workflows/backend.test.build.docker.yml
@@ -11,7 +11,8 @@ jobs:
     outputs:
       changes: ${{ steps.changes.outputs.backend-test-build-docker }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Check for backend file changes
         uses: dorny/paths-filter@v3.0.1
