--- a/presenter/.env.dist
+++ b/presenter/.env.dist
@@ -1,10 +1,10 @@
 # AUTH
-PUBLIC_ENV__AUTH__AUTHORITY="http://localhost:9000"
-PUBLIC_ENV__AUTH__AUTHORITY_SIGNUP_URI="http://localhost:9000/signup"
+PUBLIC_ENV__AUTH__AUTHORITY="http://localhost:9000/application/o/dreammall/"
+PUBLIC_ENV__AUTH__AUTHORITY_SIGNUP_URI="http://localhost:9000/if/flow/default-source-enrollment/"
+PUBLIC_ENV__AUTH__AUTHORITY_SIGNOUT_URI="http://localhost:9000/if/flow/default-invalidation-flow/"
 PUBLIC_ENV__AUTH__CLIENT_ID="dreammall-presenter"
 PUBLIC_ENV__AUTH__REDIRECT_URI="http://localhost:3000/auth"
 PUBLIC_ENV__AUTH__SILENT_REDIRECT_URI="http://localhost:3000/silent-refresh"
-PUBLIC_ENV__AUTH__POST_LOGOUT_REDIRECT_URI="http://localhost:3000"
 PUBLIC_ENV__AUTH__RESPONSE_TYPE="code"
 PUBLIC_ENV__AUTH__SCOPE="openid profile posts"
 
