--- a/package.json
+++ b/package.json
@@ -1,96 +1,44 @@
 {
-  "name": "boilerplate-backend",
-  "version": "1.0.0",
-  "description": "The IT4C Boilerplate for backends",
-  "main": "build/index.ts",
+  "name": "dreammall.earth",
+  "version": "1.2.1",
+  "description": "Dreammall.earth website & product page",
+  "main": "build/index.js",
+  "type": "module",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/IT4Change/boilerplate-backend.git"
+    "url": "git+https://github.com/dreammall-earth/dreammall.earth.git"
   },
+  "keywords": [
+    "dreammall",
+    "dreammall-earth"
+  ],
   "author": {
-    "name": "Moriz Wahl"
+    "name": "Ulf Gebhardt"
   },
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/IT4Change/boilerplate-backend/issues"
+    "url": "https://github.com/dreammall-earth/dreammall.earth/issues"
   },
+  "homepage": "https://dreammall.earth",
   "scripts": {
-    "build": "tsc",
-    "start": "TZ=UTC TS_NODE_BASEURL=./build node -r tsconfig-paths/register build/src/index.js",
-    "dev": "TZ=UTC nodemon -w src --ext ts,json --exec ts-node -r tsconfig-paths/register src/index.ts",
-    "db:migrate": "TZ=UTC npx prisma migrate dev",
-    "db:reset": "TZ=UTC npx prisma migrate reset --force",
-    "db:seed": "TZ=UTC npx prisma db seed",
-    "test:lint": "npm run test:lint:eslint && npm run test:lint:remark",
-    "test:lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx,.cjs,.mjs,.json,.yml,.yaml --max-warnings 0 .",
+    "test:lint": "npm run test:lint:remark",
     "test:lint:remark": "remark . --quiet --frail",
-    "test:unit": "TZ=UTC jest --runInBand --forceExit --detectOpenHandles",
-    "test": "npm run test:lint && npm run test:unit",
+    "test": "npm run test:lint",
     "docs:dev": "vuepress dev .",
     "docs:build": "vuepress build .",
+    "release": "scripts/release.sh",
     "update": "npx npm-check-updates"
   },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
-  },
   "dependencies": {
-    "@apollo/server": "^4.10.1",
-    "@prisma/client": "^5.11.0",
-    "@vuepress/theme-default": "^2.0.0-rc.20",
-    "graphql": "^16.8.1",
-    "graphql-scalars": "^1.22.5",
-    "prisma": "^5.11.0",
-    "reflect-metadata": "^0.2.1",
-    "tsconfig-paths": "^4.2.0",
-    "type-graphql": "^2.0.0-beta.6"
+    "@vuepress/theme-default": "^2.0.0-rc.18"
   },
   "devDependencies": {
-    "@eslint-community/eslint-plugin-eslint-comments": "^4.1.0",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.28",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
     "@vuepress/bundler-vite": "^2.0.0-rc.8",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^27.9.0",
-    "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-security": "^2.1.1",
-    "eslint-plugin-type-graphql": "^1.0.0",
-    "eslint-plugin-yml": "^1.12.2",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.0",
-    "prettier": "^3.2.5",
     "remark-cli": "^12.0.0",
     "remark-gfm": "^4.0.0",
     "remark-preset-lint-consistent": "^5.1.2",
     "remark-preset-lint-markdown-style-guide": "^5.1.3",
     "remark-preset-lint-recommended": "^6.1.3",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "tsc-watch": "^6.0.4",
-    "typescript": "^5.4.2",
     "vuepress": "^2.0.0-rc.8"
-  },
-  "imports": {
-    "#graphql/*": "./src/graphql/*",
-    "#src/*": "./src/*",
-    "#test/*": "./test/*",
-    "#types/*": "./src/graphql/types/*"
-  },
-  "engines": {
-    "node": ">=21"
-  },
-  "overrides": {
-    "eslint-plugin-type-graphql": {
-      "@typescript-eslint/parser": "$@typescript-eslint/parser",
-      "eslint": "$eslint"
-    }
   }
 }
