--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boilerplate-backend",
-  "version": "1.0.0",
+  "version": "1.2.1",
   "description": "The IT4C Boilerplate for backends",
   "main": "build/index.ts",
   "repository": {
@@ -19,6 +19,7 @@
     "start": "TZ=UTC TS_NODE_BASEURL=./build node -r tsconfig-paths/register build/src/index.js",
     "dev": "TZ=UTC nodemon -w src --ext ts,json --exec ts-node -r tsconfig-paths/register src/index.ts",
     "db:migrate": "TZ=UTC npx prisma migrate dev",
+    "db:migrate:deploy": "TZ=UTC npx prisma migrate deploy",
     "db:reset": "TZ=UTC npx prisma migrate reset --force",
     "db:seed": "TZ=UTC npx prisma db seed",
     "test:lint": "npm run test:lint:eslint && npm run test:lint:remark",
@@ -35,13 +36,18 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.1",
+    "@getbrevo/brevo": "^2.0.0-beta.4",
     "@prisma/client": "^5.11.0",
-    "@vuepress/theme-default": "^2.0.0-rc.20",
+    "@vuepress/theme-default": "^2.0.0-rc.18",
+    "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.5",
     "prisma": "^5.11.0",
+    "prisma-extension-soft-delete": "^1.0.1",
     "reflect-metadata": "^0.2.1",
     "tsconfig-paths": "^4.2.0",
+    "tslog": "^4.9.2",
     "type-graphql": "^2.0.0-beta.6"
   },
   "devDependencies": {
@@ -79,7 +85,10 @@
     "vuepress": "^2.0.0-rc.8"
   },
   "imports": {
+    "#api/*": "./src/api/*",
+    "#config/*": "./src/config/*",
     "#graphql/*": "./src/graphql/*",
+    "#inputs/*": "./src/graphql/inputs/*",
     "#src/*": "./src/*",
     "#test/*": "./test/*",
     "#types/*": "./src/graphql/types/*"
