--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -108,6 +108,56 @@ updates:
     day: "saturday"
     timezone: "Europe/Berlin"
     time: "03:00"
+  groups:
+    eslint:
+      applies-to: version-updates
+      patterns:
+        - "*eslint*"
+    pinia:
+      applies-to: version-updates
+      patterns:
+        - "*pinia*"
+    react:
+      applies-to: version-updates
+      patterns:
+        - "react*"
+    remark:
+      applies-to: version-updates
+      patterns:
+        - "remark*"
+    sass:
+      applies-to: version-updates
+      patterns:
+        - "sass*"
+    storybook:
+      applies-to: version-updates
+      patterns:
+        - "*storybook*"
+    stylelint:
+      applies-to: version-updates
+      patterns:
+        - "*stylelint*"
+    typescript:
+      applies-to: version-updates
+      patterns:
+        - "ts*"
+        - "*types*"
+    vite:
+      applies-to: version-updates
+      patterns:
+        - "*vite*"
+    vue:
+      applies-to: version-updates
+      patterns:
+        - "*vue?(/)*"
+      exclude-patterns:
+        - "vuetify"
+        - "*vuepress*"
+        - "vue-tsc"
+    vuepress:
+      applies-to: version-updates
+      patterns:
+        - "*vuepress*"  
 - package-ecosystem: docker
   open-pull-requests-limit: 99
   directory: "/admin"
